# resin

./: .gitignore  README.md  flake.nix
flake/: outputs.nix
nb/: Ansia-pixel.ipynb  Ansia.ipynb  nn-interpolate.ipynb
python/: arch.py  dataset.py  justfile  matplotlibrc  train_nn.py
rust/: Cargo.toml  justfile
rust/src/: point.rs
