[package]
name    = "RESIN"
version = "0.0.0"
authors = ["Gonzalo Martinez Lema <gonzaloml@post.bgu.ac.il"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap          = { version = "4.4.18", features = ["derive"] }
float_eq      = "1.0.1"
indicatif     = "0.17.7"
itertools     = "0.12.0"
num-traits    = "0.2.17"
ordered-float = "4.2"
polars        = { version = "0.37.0", features = ["lazy", "parquet"] }

rand          = "0.8.5"
rand_distr    = "0.4.3"
rayon         = "1.8.1"
